# TotalPR

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml
docker/: ripgrep.Dockerfile  ruff.Dockerfile
evals/: eval_set.json
migrations/: 001_init.sql
scripts/: init_db.py  label_memory.py  run_evals.py  run_smoke.py
src/sentry/: anthropic_client.py  dedupe.py  embedding.py  graph.py  memory.py  state.py  telemetry.py  workspace.py
src/sentry/api/: dispatch.py  main.py
src/sentry/github/: auth.py  client.py  poster.py
src/sentry/nodes/: critique.py  format_review.py  plan.py  write_memory.py
src/sentry/tools/: __init__.py  docs_lookup_tool.py  ripgrep_tool.py  ruff_tool.py  semgrep_tool.py
tests/: test_anthropic_client.py  test_api.py  test_auth.py  test_critique.py  test_dedupe.py  test_dispatch.py  test_docs_lookup_tool.py  test_embedding.py  test_format_review.py  test_github_client.py  test_github_poster.py  test_memory.py  test_plan.py  test_ripgrep_tool.py  test_ruff_tool.py  test_semgrep_tool.py  test_state.py  test_telemetry.py  test_workspace.py  test_write_memory.py
