[project]
name = "sentry"
version = "0.1.0"
description = "Autonomous code-review agent that reviews GitHub pull requests using Claude with tool use."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2",
    "anthropic>=0.40",
    "pydantic>=2.8",
    "pydantic-settings>=2.0",
    "unidiff>=0.7",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
    "voyageai>=0.3",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.8",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sentry = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.mypy.overrides]]
module = "sentry.graph"
disable_error_code = ["type-arg", "arg-type"]